--- a/packages/@ember/-internals/glimmer/lib/templates/input.hbs
+++ b/packages/@ember/-internals/glimmer/lib/templates/input.hbs
@@ -54,31 +54,7 @@
     {{on "paste" this.valueDidChange}}
     {{on "cut" this.valueDidChange}}
 
-    {{!-- deprecated native event callbacks --}}
-    {{on "touchstart" this._touchStart}}
-    {{on "touchmove" this._touchMove}}
-    {{on "touchend" this._touchEnd}}
-    {{on "touchcancel" this._touchCancel}}
-    {{on "keydown" this._keyDown}}
-    {{on "keypress" this._keyPress}}
-    {{on "mousedown" this._mouseDown}}
-    {{on "mouseup" this._mouseUp}}
-    {{on "contextmenu" this._contextMenu}}
-    {{on "click" this._click}}
-    {{on "dblclick" this._doubleClick}}
-    {{on "focusin" this._focusIn}}
-    {{on "focusout" this._focusOut}}
-    {{on "submit" this._submit}}
-    {{on "dragstart" this._dragStart}}
-    {{on "drag" this._drag}}
-    {{on "dragenter" this._dragEnter}}
-    {{on "dragleave" this._dragLeave}}
-    {{on "dragover" this._dragOver}}
-    {{on "drop" this._drop}}
-    {{on "dragend" this._dragEnd}}
-    {{on "mouseenter" this._mouseEnter}}
-    {{on "mouseleave" this._mouseLeave}}
-    {{on "mousemove" this._mouseMove}}
+    {{this.DeprecatedInputEventHandlersModifier this}}
   />
 {{~else~}}
   {{~#let (component '-checkbox') (component '-text-field') as |Checkbox TextField|~}}
