--- a/packages/@ember/-internals/glimmer/lib/templates/textarea.hbs
+++ b/packages/@ember/-internals/glimmer/lib/templates/textarea.hbs
@@ -5,6 +5,7 @@
     class={{this.class}}
 
     {{!-- deprecated attribute bindings --}}
+    role={{this._ariaRole}}
     autocapitalize={{this._autocapitalize}}
     autocorrect={{this._autocorrect}}
     autofocus={{this._autofocus}}
