[FEATURE modernized-built-in-components] Support `@elementId`
Part of #19270

--- a/packages/@ember/-internals/glimmer/lib/templates/input.hbs
+++ b/packages/@ember/-internals/glimmer/lib/templates/input.hbs
@@ -5,43 +5,43 @@
     class={{this.class}}
 
     {{!-- deprecated attribute bindings --}}
-    role={{this._ariaRole}}
-    autocapitalize={{this._autocapitalize}}
-    autocorrect={{this._autocorrect}}
-    autofocus={{this._autofocus}}
-    disabled={{this._disabled}}
-    form={{this._form}}
-    maxlength={{this._maxlength}}
-    minlength={{this._minlength}}
-    placeholder={{this._placeholder}}
-    readonly={{this._readonly}}
-    required={{this._required}}
-    selectionDirection={{this._selectionDirection}}
-    spellcheck={{this._spellcheck}}
-    tabindex={{this._tabindex}}
-    title={{this._title}}
-    accept={{this._accept}}
-    autocomplete={{this._autocomplete}}
-    autosave={{this._autosave}}
-    dir={{this._dir}}
-    formaction={{this._formaction}}
-    formenctype={{this._formenctype}}
-    formmethod={{this._formmethod}}
-    formnovalidate={{this._formnovalidate}}
-    formtarget={{this._formtarget}}
-    height={{this._height}}
-    inputmode={{this._inputmode}}
-    lang={{this._lang}}
-    list={{this._list}}
-    max={{this._max}}
-    min={{this._min}}
-    multiple={{this._multiple}}
-    name={{this._name}}
-    pattern={{this._pattern}}
-    size={{this._size}}
-    step={{this._step}}
-    width={{this._width}}
-    indeterminate={{this._indeterminate}}
+    role={{this.role}}
+    autocapitalize={{this.autocapitalize}}
+    autocorrect={{this.autocorrect}}
+    autofocus={{this.autofocus}}
+    disabled={{this.disabled}}
+    form={{this.form}}
+    maxlength={{this.maxlength}}
+    minlength={{this.minlength}}
+    placeholder={{this.placeholder}}
+    readonly={{this.readonly}}
+    required={{this.required}}
+    selectionDirection={{this.selectionDirection}}
+    spellcheck={{this.spellcheck}}
+    tabindex={{this.tabindex}}
+    title={{this.title}}
+    accept={{this.accept}}
+    autocomplete={{this.autocomplete}}
+    autosave={{this.autosave}}
+    dir={{this.dir}}
+    formaction={{this.formaction}}
+    formenctype={{this.formenctype}}
+    formmethod={{this.formmethod}}
+    formnovalidate={{this.formnovalidate}}
+    formtarget={{this.formtarget}}
+    height={{this.height}}
+    inputmode={{this.inputmode}}
+    lang={{this.lang}}
+    list={{this.list}}
+    max={{this.max}}
+    min={{this.min}}
+    multiple={{this.multiple}}
+    name={{this.name}}
+    pattern={{this.pattern}}
+    size={{this.size}}
+    step={{this.step}}
+    width={{this.width}}
+    indeterminate={{this.indeterminate}}
 
     ...attributes
 
