--- a/packages/@ember/-internals/glimmer/lib/templates/textarea.hbs
+++ b/packages/@ember/-internals/glimmer/lib/templates/textarea.hbs
@@ -5,30 +5,30 @@
     class={{this.class}}
 
     {{!-- deprecated attribute bindings --}}
-    role={{this._ariaRole}}
-    autocapitalize={{this._autocapitalize}}
-    autocorrect={{this._autocorrect}}
-    autofocus={{this._autofocus}}
-    disabled={{this._disabled}}
-    form={{this._form}}
-    maxlength={{this._maxlength}}
-    minlength={{this._minlength}}
-    placeholder={{this._placeholder}}
-    readonly={{this._readonly}}
-    required={{this._required}}
-    selectionDirection={{this._selectionDirection}}
-    spellcheck={{this._spellcheck}}
-    tabindex={{this._tabindex}}
-    title={{this._title}}
-    rows={{this._rows}}
-    cols={{this._cols}}
-    name={{this._name}}
-    selectionEnd={{this._selectionEnd}}
-    selectionStart={{this._selectionStart}}
-    autocomplete={{this._autocomplete}}
-    wrap={{this._wrap}}
-    lang={{this._lang}}
-    dir={{this._dir}}
+    role={{this.role}}
+    autocapitalize={{this.autocapitalize}}
+    autocorrect={{this.autocorrect}}
+    autofocus={{this.autofocus}}
+    disabled={{this.disabled}}
+    form={{this.form}}
+    maxlength={{this.maxlength}}
+    minlength={{this.minlength}}
+    placeholder={{this.placeholder}}
+    readonly={{this.readonly}}
+    required={{this.required}}
+    selectionDirection={{this.selectionDirection}}
+    spellcheck={{this.spellcheck}}
+    tabindex={{this.tabindex}}
+    title={{this.title}}
+    rows={{this.rows}}
+    cols={{this.cols}}
+    name={{this.name}}
+    selectionEnd={{this.selectionEnd}}
+    selectionStart={{this.selectionStart}}
+    autocomplete={{this.autocomplete}}
+    wrap={{this.wrap}}
+    lang={{this.lang}}
+    dir={{this.dir}}
 
     ...attributes
 
